Safari Alignment Fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
 #main{
 	position: relative;
   top: 50%;
-  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
 }
 
 html {
